# CrawlerTutorial

./: .gitignore  CLAUDE.md  README.md  package-lock.json
docs/: index.md
docs/.vitepress/: config.mjs
docs/爬虫入门/: 01_为什么要写这个爬虫教程.md  02_个人学会爬虫能赚钱吗.md  03_网络爬虫到底是什么.md  05_常用的抓包工具有那些.md  06_为什么说用Python写爬虫有天生优势.md  07_Python常见的网络请求库.md  08_爬虫入门实战1_静态网页数据提取.md  09_爬虫入门实战2_动态数据提取.md  10_爬虫入门实战3_数据存储实现.md  11_爬虫入门实战4_高效率的爬虫实现.md
docs/爬虫进价/: 01_工程化爬虫开发规范.md  02_反爬虫对抗基础_请求伪装.md  03_代理IP的使用与管理.md  04_Playwright浏览器自动化入门.md  05_Playwright进阶_反检测与性能优化.md  06_登录认证_Cookie与Session管理.md  07_登录认证_扫码与短信登录实现.md  08_验证码识别与处理.md  09_数据清洗与预处理.md  10_数据分析与可视化.md  11_进阶综合实战项目.md  README.md
源代码/爬虫入门/: main.py
源代码/爬虫入门/08_爬虫入门实战1_静态网页数据提取/: 001_网页数据提取代码.py  002_源码实现_同步版本.py  003_源码实现_异步版本.py  common.py
源代码/爬虫入门/09_爬虫入门实战2_动态数据提取/: 001_curl_to_request.py  002_源码实现_同步版本.py  003_源码实现_异步版本.py  common.py  result_example.json  symbol_data_1712503089.csv  symbol_data_1712504522.csv
源代码/爬虫入门/10_爬虫入门实战3_数据存储实现/: abstract_store.py  abstract_store_impl.py  async_db.py  common.py  main.py  requirements.txt  sqls.py  symbol_content.sql  test_pydantic_model.py
源代码/爬虫入门/11_爬虫入门实战4_高效率的爬虫实现/: 1_multi_process_demo.py  2_multi_thread_demo.py  3_multi_coroutine_demo.py  common.py  run_crawler_multi_coroutine.py  run_crawler_multi_process.py  run_crawler_multi_thread.py
源代码/爬虫进阶/: README.md  pyproject.toml
源代码/爬虫进阶/01_工程化爬虫开发规范/: README.md  bilibili_config.py  exception_demo.py  logger_demo.py  pyproject.toml
源代码/爬虫进阶/01_工程化爬虫开发规范/config/: __init__.py  settings.py
源代码/爬虫进阶/01_工程化爬虫开发规范/refactored_crawler/: __init__.py  client.py  config.py  crawler.py  exceptions.py  logger.py  main.py  models.py  parser.py
源代码/爬虫进阶/02_反爬虫对抗基础_请求伪装/: README.md  anti_detection_crawler.py  bilibili_headers.py  headers_builder.py  pyproject.toml  rate_limiter.py  ua_rotator.py
源代码/爬虫进阶/03_代理IP的使用与管理/: README.md  bilibili_proxy_demo.py  proxy_checker.py  proxy_demo.py  pyproject.toml
源代码/爬虫进阶/03_代理IP的使用与管理/proxy_pool/: __init__.py  base.py  checker.py  pool.py
源代码/爬虫进阶/04_Playwright浏览器自动化入门/: README.md  basic_operations.py  bilibili_basic.py  pyproject.toml  spa_crawler.py  wait_strategies.py
源代码/爬虫进阶/05_Playwright进阶_反检测与性能优化/: README.md  bilibili_stealth.py  cdp_mode.py  performance_optimization.py  pyproject.toml  stealth_demo.py
源代码/爬虫进阶/06_登录认证_Cookie与Session管理/: README.md  bilibili_cookie.py  cookie_manager.py  login_state_checker.py  pyproject.toml  session_demo.py
源代码/爬虫进阶/07_登录认证_扫码与短信登录实现/: README.md  bilibili_qrcode_login.py  login_factory.py  pyproject.toml  qrcode_login.py  sms_login.py
源代码/爬虫进阶/08_验证码识别与处理/: README.md  bilibili_captcha.py  captcha_service.py  ocr_captcha.py  pyproject.toml  slider_captcha.py
源代码/爬虫进阶/09_数据清洗与预处理/: README.md  bilibili_cleaner.py  data_normalizer.py  deduplication.py  pyproject.toml  text_cleaner.py
源代码/爬虫进阶/10_数据分析与可视化/: README.md  bilibili_analyzer.py  chart_demo.py  pandas_analysis.py  pyproject.toml  wordcloud_generator.py
源代码/爬虫进阶/11_进阶综合实战项目/: README.md  main.py  pyproject.toml  test_quick.py
源代码/爬虫进阶/11_进阶综合实战项目/analysis/: __init__.py  report.py
源代码/爬虫进阶/11_进阶综合实战项目/client/: __init__.py  bilibili_client.py
源代码/爬虫进阶/11_进阶综合实战项目/config/: __init__.py  bilibili_config.py  settings.py
源代码/爬虫进阶/11_进阶综合实战项目/core/: __init__.py  browser.py
源代码/爬虫进阶/11_进阶综合实战项目/crawler/: __init__.py  spider.py
源代码/爬虫进阶/11_进阶综合实战项目/login/: __init__.py  auth.py
源代码/爬虫进阶/11_进阶综合实战项目/models/: __init__.py  bilibili.py
源代码/爬虫进阶/11_进阶综合实战项目/proxy/: __init__.py  pool.py
源代码/爬虫进阶/11_进阶综合实战项目/store/: __init__.py  backend.py
源代码/爬虫进阶/11_进阶综合实战项目/tools/: __init__.py  sign.py
源代码/高级爬虫/: main.py
爬虫入门/: 01_为什么要写这个爬虫教程.md  02_个人学会爬虫能赚钱吗.md  03_网络爬虫到底是什么.md  04_爬虫的基本工作原理.md  05_常用的抓包工具有那些.md  07_Python常见的网络请求库.md  08_爬虫入门实战1_静态网页数据提取.md  09_爬虫入门实战2_动态数据提取.md  10_爬虫入门实战3_数据存储实现.md
