[project]
name = "crawler-advanced-tutorial"
version = "0.1.0"
description = "爬虫进阶教程 - 包含11个章节的完整学习代码"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖（所有章节共用）
    "loguru>=0.7.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # 数据解析
    "parsel>=1.9.0",

    # 反爬虫对抗
    "fake-useragent>=1.5.0",
    "curl-cffi>=0.7.0",

    # 浏览器自动化
    "playwright>=1.45.0",

    # 验证码处理
    "pillow>=10.0.0",
    "ddddocr>=1.4.0",
    "opencv-python>=4.9.0",

    # 数据分析与可视化
    "pandas>=2.2.0",
    "jieba>=0.42.0",
    "wordcloud>=1.9.0",
    "matplotlib>=3.8.0",
    "pyecharts>=2.0.0",

    # 其他工具
    "cryptography>=42.0.0",
    "qrcode[pil]>=7.4.0",
    "simhash>=2.1.0",
]

[tool.uv]
dev-dependencies = []
