[project]
name = "chapter01-engineering-standards"
version = "0.1.0"
description = "第01章：工程化爬虫开发规范 - 展示日志、配置管理、异常处理等工程化实践"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "parsel>=1.9.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
