[project]
name = "chapter03-proxy-management"
version = "0.1.0"
description = "第03章：代理IP的使用与管理 - 代理池设计、代理检测、多URL测试"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
