[project]
name = "chapter07-qrcode-sms-login"
version = "0.1.0"
description = "第07章：登录认证 - 扫码登录与短信登录技术框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.45.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
qrcode = [
    "qrcode[pil]>=7.4.0",  # 二维码生成和显示
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

# 提示：安装后需要运行 playwright install 安装浏览器驱动
