[project]
name = "chapter11-complete-project"
version = "0.1.0"
description = "第11章：进阶综合实战项目 - books.toscrape.com电商数据采集工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",

    # 数据分析
    "pandas>=2.2.0",
    "jieba>=0.42.0",
    "wordcloud>=1.9.0",
]

[project.optional-dependencies]
settings = [
    "pydantic-settings>=2.0.0",  # 配置管理增强
]
all = [
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

# 提示：
# 1. 安装后需要运行 playwright install 安装浏览器驱动
# 2. 目标网站：http://books.toscrape.com（专门的爬虫练习网站）
