[project]
name = "bilibili-crawler"
version = "0.1.0"
description = "第11章：进阶综合实战项目 - B站视频数据采集与分析工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # 核心依赖
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",

    # 数据分析（可选，但默认安装）
    "pandas>=2.2.0",
    "jieba>=0.42.0",
    "wordcloud>=1.9.0",
    "pillow>=10.0.0",
]

[project.scripts]
bilibili-crawler = "main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# 不打包为 wheel，仅作为脚本项目运行
packages = [
    "config",
    "core",
    "login",
    "client",
    "crawler",
    "store",
    "proxy",
    "models",
    "tools",
    "analysis",
]

[tool.uv]
dev-dependencies = []

# 提示：
# 1. 安装后需要运行 playwright install chromium 安装浏览器驱动
# 2. 目标网站：https://www.bilibili.com
# 3. 运行方式：python main.py 或 uv run python main.py
